--- a/formulário.html
+++ b/formulário.html
@@ -43,7 +43,7 @@
       </form>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="home.html">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="produtos.html">Produtos</a>
@@ -101,7 +101,7 @@
                         <div class="legenda-p"></div>
                         <label for="email" class="label icon icon-lock-1"> Senha</label>
                     </div>
-                    <a href="home.html"><input class="btn" type="button" value="Entrar"></a>
+                    <a href="index.html"><input class="btn" type="button" value="Entrar"></a>
 
                 </form>
             </div>
