--- a/tulipa.html
+++ b/tulipa.html
@@ -37,7 +37,7 @@
       </form>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="home.html">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="produtos.html">Produtos</a>
