--- a/contatos.html
+++ b/contatos.html
@@ -88,7 +88,7 @@
         </div>
         <div class="row">
             <div class="col" style="text-align: justify;">
-                <img src="img/logo.jpeg" style="margin-left: 400px;">
+                <img src="img/logo.jpeg" style="center">
                 <h1> Nossos contatos e redes sociais </h1>
             </div>
             <div class="accordion" id="accordionExample">
