--- a/diadosmortos.html
+++ b/diadosmortos.html
@@ -89,7 +89,7 @@
                 <p class="p">𝐃𝐚𝐭𝐚𝐬 𝐜𝐨𝐦𝐞𝐦𝐨𝐫𝐚𝐭𝐢𝐯𝐚𝐬</p>
                 <h1 class="h1">Dia dos mortos</h1>
                 <p class="p">
-                </p>até mesmo as pessoas que já nos deixaram ainda passam por nossa mente, não é? a cada dia, mês, ano que se passa essas memórias e saudades se vão e o que resta?
+                    até mesmo as pessoas que já nos deixaram ainda passam por nossa mente, não é? a cada dia, mês, ano que se passa essas memórias e saudades se vão e o que resta?
                 </p>
                 
                 <p class="p">
@@ -101,9 +101,9 @@
             </div>
             <div class="col">
                 <figure class="figure">
-                    <img src="img/strelitzia.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <img src="img/diados.jpg" class="figure-img img-fluid rounded" alt="...">
                 </div>
-                   <figcaption class="figure-caption text-end"> Estrelitzias</figcaption>
+                   <figcaption class="figure-caption text-end"> Flor laranja </figcaption>
                 </figure>
             </div>
         </div>
