--- a/orquidea.html
+++ b/orquidea.html
@@ -88,10 +88,10 @@
         <h1 class="h1-flor">Qual é o verdadeiro significado de orquídea?</h1>
         <p class="p">A orquídea pode ter variadíssimos significados, amor, desejo, luxúria, perfeição, pureza
           espiritual, força, luxo, beleza, etc. Cores diferentes têm significados diferentes.</p>
-        <img src="img/orquídea4.jpg" class="img-thumbnail" alt="...">
+        <img src="img/azul.jpg" class="img-thumbnail" alt="...">
       </div>
       <div class="col">
-        <img src="img/orquídea2.jpg" class="img-thumbnail" alt="...">
+        <img src="img/orquidea.jpg" class="img-thumbnail" alt="...">
         <h1 class="h1-flor">Qual é a mensagem de orquídea?</h1>
         <p class="p">Flor da sedução, ideal para conquistar seu interesse amoroso. Orquídea Branca: Amor puro (bastante
           comum nos bouquets de noivas).</p>
@@ -101,7 +101,7 @@
         <p class="p">O melhor material é o barro ou a cerâmica, já que isso ajuda na transpiração da flor. Você pode
           comprar vasos de vidro ou plástico também. Outro item essencial para os cuidados com a orquídea são os
           materiais para a sustentação da planta.</p>
-        <img src="img/orquídea3.jpg" class="img-thumbnail" alt="...">
+        <img src="img/orquidea3.jpg" class="img-thumbnail" alt="...">
       </div>
     </div>
     <br>
