--- a/promocoes.html
+++ b/promocoes.html
@@ -83,6 +83,58 @@
     </div>
   </div>
     <br>
+<div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <div class="card" style="width: 15rem;">
+          <img src="img/flor.chocolate.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> buque de flores + chocolates </h5>
+            <p class="card-text"> buque de flores a sua escolha acompanhado de chocolates </p>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora
+            </button>
+          </div><!-- card body-->
+        </div><!-- card 1-->
+      </div><!-- col1 -->
+      <div class="col">
+        <div class="card" style="width: 15rem;">
+          <img src="img/arranjo.chique.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> arranjo chique </h5>
+            <p class="card-text"> Arranjo decorativo com flores especiais </p>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora
+            </button>
+          </div><!-- card body-->
+        </div><!-- card 1-->
+      </div><!-- col1 -->
+      <div class="col">
+        <div class="card" style="width: 15rem;">
+          <img src="img/vasopremiun.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> vaso premiun </h5>
+            <p class="card-text"> vaso impotado decorativo </p>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora
+            </button>
+          </div><!-- card body-->
+        </div><!-- card 1-->
+      </div><!-- col1 -->
+      <div class="col">
+        <div class="card" style="width: 15rem;">
+          <img src="img/boque.estilizado.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> buque estilizado </h5>
+            <p class="card-text"> Buque pesonalizado com até 6 especies a sua escolha </p>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora
+            </button>
+          </div><!-- card body-->
+        </div><!-- card 1-->
+      </div><!-- col1 -->
+    </div>
+    <br>
     <div class="row">
       <div class="col">
         <div class="card" style="width: 15rem;">
@@ -159,3 +211,6 @@
     </div>
     <br>
 </body>
+
+</html>
+""
