--- a/sobrenos.html
+++ b/sobrenos.html
@@ -170,7 +170,7 @@
       </div>
       <div class="row">
         <div class="col">
-        <img src="img/nos%.jpg" class="figure-img img-fluid rounded" alt="..."> 
+        <img src="img/sobrenos.jpg" class="figure-img img-fluid rounded" alt="..."> 
           <h5 class="p">Apesar de todos esses problemas e intercorrências, o projeto se desenvolveu de forma leve e eficiente,
             calmamente resolvemos cada um dos obstáculos para entregamos um bom trabalho. Horas de edição, problemas de
             comunicação, desentendimentos, discussões e brigas são normais e existem em todo e qualquer trabalho,
