--- a/diadosmortos.html
+++ b/diadosmortos.html
@@ -52,7 +52,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="Páscoa.html"> Feliz Páscoa </a></li>
             <li><a class="dropdown-item" href="diadosnamorados.html"> Dia dos Namorados </a></li>
-                        <li><a class="dropdown-item" href="diadosmortos.html"> Dia dos Mortos </a></li>
+                        <li><a class="dropdown-item disabled" href="diadosmortos.html"> Dia dos Mortos </a></li>
           </ul>
         </li>
         <li class="nav-item">
