--- a/orquidea.html
+++ b/orquidea.html
@@ -62,7 +62,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="girassol.html">Girassol</a></li>
             <li><a class="dropdown-item" href="rosa.html">Rosa</a></li>
-            <li><a class="dropdown-item" href="orquidea.html">Orquidia</a></li>
+            <li><a class="dropdown-item disabled" href="orquidea.html">Orquidia</a></li>
             <li><a class="dropdown-item" href="margarida.html">Margarida</a></li>
             <li><a class="dropdown-item" href="tulipa.html">Tulipa</a></li>
           </ul>
