--- a/contatos.html
+++ b/contatos.html
@@ -87,8 +87,8 @@
             &nbsp;
         </div>
         <div class="row">
-            <div class="col" style="text-align: justify;">
-                <img src="img/logo.jpeg" style="center">
+            <div class="col" style="text-align: auto">
+                <img src="img/logo.jpeg" class="rounded float-midle" id="logo" alt="Logo">
                 <h1> Nossos contatos e redes sociais </h1>
             </div>
             <div class="accordion" id="accordionExample">
