--- a/datascomemorativas.html
+++ b/datascomemorativas.html
@@ -81,34 +81,32 @@
       </ul>
     </div>
   </div>
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item active">
-       <a class="img-link" href="diadosnamorados.html">
-      <img src="img/bannernamorados.png" class="d-block w-100" alt="..."></a>
-    </div>
-    <div class="carousel-item">
-      <a class="img-link" href="diadosmortos.html">
-      <img src="img/bannerfinados.png" class="d-block w-100" alt="..."></a>
-    </div>
-    <div class="carousel-item">
-      <a class="img-link" href="Páscoa.html">
+    <div class="carousel-item active" data-bs-interval="10000">
       <img src="img/bannerpascoa.png" class="d-block w-100" alt="...">
     </div>
+    <div class="carousel-item" data-bs-interval="2000">
+      <img src="img/bannernamorados.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/bannerfinados.png" class="d-block w-100" alt="...">
+    </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+</div>
 </div>
 </body>
 </html>
