--- a/diadosmortos.html
+++ b/diadosmortos.html
@@ -52,7 +52,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="Páscoa.html"> Feliz Páscoa </a></li>
             <li><a class="dropdown-item" href="diadosnamorados.html"> Dia dos Namorados </a></li>
-            <li><a class="dropdown-item disabled" href="diadosmortos.html"> Dia dos Mortos </a></li>
+                        <li><a class="dropdown-item" href="diadosmortos.html"> Dia dos Mortos </a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -89,14 +89,14 @@
                 <p class="p">𝐃𝐚𝐭𝐚𝐬 𝐜𝐨𝐦𝐞𝐦𝐨𝐫𝐚𝐭𝐢𝐯𝐚𝐬</p>
                 <h1 class="h1">Dia dos mortos</h1>
                 <p class="p">
-                    Até mesmo as pessoas que já nos deixaram ainda passam por nossa mente, não é? a cada dia, mês, ano que se passa essas memórias e saudades se vão e o que resta?
+                    até mesmo as pessoas que já nos deixaram ainda passam por nossa mente, não é? a cada dia, mês, ano que se passa essas memórias e saudades se vão e o que resta?
                 </p>
                 
                 <p class="p">
-                    Relembra-las e prestar homenagens a vida que tiveram no "plano carnal" as vezes é também uma forma de superar o luto e seguir em frente.
+                    relembra-las e prestar homenagens a vida que tiveram no "plano carnal" as vezes é também uma forma de superar o luto e seguir em frente.
                 </p>
                 <p class="p">
-                  Encomende sua coroa de flores e se lembre dessas pessoas!
+                  encomende sua coroa de flores e se lembre dessas pessoas!
                 </p>
             </div>
             <div class="col">
