--- a/formulário.html
+++ b/formulário.html
@@ -101,7 +101,7 @@
                         <div class="legenda-p"></div>
                         <label for="email" class="label icon icon-lock-1"> Senha</label>
                     </div>
-                    <a href="home.html"><input class="btn" type="button" value="Entrar"></a>
+                    <a href="index.html"><input class="btn" type="button" value="Entrar"></a>
 
                 </form>
             </div>
