--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <br>
       <p2>Veja algumas sugestões:</p2>
       <a class="nav-link" href="datascomemorativas.html"> 𝑫𝒂𝒕𝒂𝒔 𝒆𝒔𝒑𝒆𝒄𝒊𝒂𝒊𝒔 </a>
-      <img src="img/seta-direita.png" class="rounded float-end img-seta" alt="Seta">
+   <img src="img/seta-direita.png" class="rounded float-midle" id="Seta" alt="Seta">
     </div>
     <br>
     <div class="callout text-center" id="caixa"> Leve dois buquês de flores e ganhe um brinde da nossa loja</div>
