--- a/diadosnamorados.html
+++ b/diadosnamorados.html
@@ -34,10 +34,10 @@
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="container-fluid" id="menu-header2">
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" id="search" type="submit">Search</button>
-      </form>
+  <form class="d-flex" role="search">
+    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+    <a class"nav-item" href="searc.html"><button class="btn btn-outline-success" type="button">Search</button></a>
+  </form>
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
