--- a/searc.html
+++ b/searc.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
-  <title>Produtos</title>
+  <title>Search</title>
 </head>
 
 <body>
@@ -84,6 +84,7 @@
   </div>
   <br>
   <div class="container text-center">
+    <h1>Página de pesquisa organizada</h1>
     <div class="row">
       <div class="col">
         <div class="card" style="width: 15rem;">
@@ -237,6 +238,112 @@
       </div><!-- col1 -->
     </div>
     <br>
+<div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <div class="card" style="width: 15rem;">
+          <img src="img/flor.chocolate.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> buque de flores + chocolates </h5>
+            <p class="card-text"> buque de flores a sua escolha acompanhado de chocolates </p>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora
+            </button>
+          </div><!-- card body-->
+        </div><!-- card 1-->
+      </div><!-- col1 -->
+      <div class="col">
+        <div class="card" style="width: 15rem;">
+          <img src="img/arranjo.chique.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> arranjo chique </h5>
+            <p class="card-text"> Arranjo decorativo com flores especiais </p>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora
+            </button>
+          </div><!-- card body-->
+        </div><!-- card 1-->
+      </div><!-- col1 -->
+      <div class="col">
+        <div class="card" style="width: 15rem;">
+          <img src="img/vasopremiun.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> vaso premiun </h5>
+            <p class="card-text"> vaso impotado decorativo </p>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora
+            </button>
+          </div><!-- card body-->
+        </div><!-- card 1-->
+      </div><!-- col1 -->
+      <div class="col">
+        <div class="card" style="width: 15rem;">
+          <img src="img/boque.estilizado.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> buque estilizado </h5>
+            <p class="card-text"> Buque pesonalizado com até 6 especies a sua escolha </p>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora
+            </button>
+          </div><!-- card body-->
+        </div><!-- card 1-->
+      </div><!-- col1 -->
+    </div>
+    <br>
+    <div class="row">
+      <div class="col">
+        <div class="card" style="width: 15rem;">
+          <img src="img/flores.artificiais.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> flores artificiais decorativas + aromatizante de ar </h5>
+            <p class="card-text"> ideal para decorar interiores e perfumar o hambiente </p>
+            <button type="button" class="btn btn-primary" id="modalbotao" data-bs-toggle="modal"
+              data-bs-target="#staticBackdrop">
+              Compre agora
+            </button>
+          </div><!-- card body-->
+        </div><!-- card 1-->
+      </div><!-- col1 -->
+      <div class="col">
+        <div class="card" style="width: 15rem;">
+          <img src="img/cesta.de.cafe.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> Cesta de café da manhã </h5>
+            <p class="card-text"> Cesta com itens de café, sempre fresquinho e a pronta entrega </p>
+            <button type="button" class="btn btn-primary" id="modalbotao" data-bs-toggle="modal"
+              data-bs-target="#staticBackdrop">
+              Compre agora
+            </button>
+          </div><!-- card body-->
+        </div><!-- card 1-->
+      </div><!-- col1 -->
+      <div class="col">
+        <div class="card" style="width: 15rem;">
+          <img src="img/inverno1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> Sabores do inverno </h5>
+            <p class="card-text"> Cesta com os favoritos do inverno </p>
+            <button type="button" class="btn btn-primary" id="modalbotao" data-bs-toggle="modal"
+              data-bs-target="#staticBackdrop">
+              Compre agora
+            </button>
+          </div><!-- card body-->
+        </div><!-- card 1-->
+      </div><!-- col1 -->
+      <div class="col">
+        <div class="card" style="width: 15rem;">
+          <img src="img/urso.flor.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> urso de pelucia + solitaria </h5>
+            <p class="card-text"> Urso de pelucia acompanhado de uma flor a sua escolha </p>
+            <button type="button" class="btn btn-primary" id="modalbotao" data-bs-toggle="modal"
+              data-bs-target="#staticBackdrop">
+              Compre agora
+            </button>
+          </div><!-- card body-->
+        </div><!-- card 1-->
+      </div><!-- col1 -->
+    </div>
       <!-- Modal -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
       aria-labelledby="staticBackdropLabel" aria-hidden="true">
