--- a/datascomemorativas.html
+++ b/datascomemorativas.html
@@ -20,7 +20,6 @@
         data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"> BeloMar </button>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
       </div>
@@ -82,35 +81,41 @@
       </ul>
     </div>
   </div>
-<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="10000">
+        <a class="link revieter" href="Páscoa.html"> <img src="img/bannerpascoa.png" class="d-block w-100" alt="...">
+        </a>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <a class="link revieter" href="diadosnamorados.html"> <img src="img/bannernamorados.png" class="d-block w-100"
+            alt="..."></a>
+      </div>
+      <div class="carousel-item">
+        <a class="link revieter" href="diadefinados.html"> <img src="img/bannerfinados.png" class="d-block w-100"
+            alt="..."></a>
+      </div>
+      <div class="carousel-item">
+        <a class="link revieter" href="diadabandeira.html"> <img src="img/bannerbandeira.png" class="d-block w-100"
+            alt="..."></a>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="10000">
-      <a class="link revieter" href="Páscoa.html"> <img src="img/bannerpascoa.png" class="d-block w-100" alt="..."> </a>
-    </div>
-    <div class="carousel-item" data-bs-interval="2000">
-      <a class="link revieter" href="diadosnamorados.html"> <img src="img/bannernamorados.png" class="d-block w-100" alt="..."></a>
-    </div>
-    <div class="carousel-item">
-      <a class="link revieter" href="diadefinados.html"> <img src="img/bannerfinados.png" class="d-block w-100" alt="..."></a>
-    </div>
-    <div class="carousel-item">
-      <a class="link revieter" href="diadabandeira.html"> <img src="img/bannerbandeira.png" class="d-block w-100" alt="..."></a>
-    </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-</div>
 </body>
+
 </html>
