--- a/sobrenos.html
+++ b/sobrenos.html
@@ -11,7 +11,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sobre nos</title>
+  <title>BeloMar</title>
 </head>
 
 <body>
@@ -21,7 +21,6 @@
         data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"> BeloMar </button>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
       </div>
@@ -171,19 +170,20 @@
       </div>
       <div class="row">
         <div class="col">
-        <img src="img/sobrenos.jpg" class="figure-img img-fluid rounded" alt="..."> 
-          <h5 class="p">Apesar de todos esses problemas e intercorrências, o projeto se desenvolveu de forma leve e eficiente,
+          <img src="img/sobrenos.jpg" class="figure-img img-fluid rounded" alt="...">
+          <h5 class="p">Apesar de todos esses problemas e intercorrências, o projeto se desenvolveu de forma leve e
+            eficiente,
             calmamente resolvemos cada um dos obstáculos para entregamos um bom trabalho. Horas de edição, problemas de
             comunicação, desentendimentos, discussões e brigas são normais e existem em todo e qualquer trabalho,
             resolvê-los em grupo, ajudando uns aos outros é fundamental e essencial.
-           </h5>
-          <h5 class="p">
-          Durante os dois meses de projeto, criamos um vínculo ainda mais forte, mais do que colegas de classe nos
-            tornamos amigos e parceiros. Essas experiências que foram magníficas com certeza vão perpetuar até o fim da
-            nossa caminhada letiva. 
           </h5>
-          <h5 class="p"> 
-            Cada momento foi especial e importante! 
+          <h5 class="p">
+            Durante os dois meses de projeto, criamos um vínculo ainda mais forte, mais do que colegas de classe nos
+            tornamos amigos e parceiros. Essas experiências que foram magníficas com certeza vão perpetuar até o fim da
+            nossa caminhada letiva.
+          </h5>
+          <h5 class="p">
+            Cada momento foi especial e importante!
           </h5>
           <br>
           <p class="p">Layara Miranda – Membro que diserta em nome do grupo. </p>
