--- a/diadefinados.html
+++ b/diadefinados.html
@@ -2,26 +2,25 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dia de finados </title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BeloMar</title>
 </head>
 
 <body>
-   <nav class="navbar navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <button class="btn btn-primary" id="botao-home" type="button" data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"> BeloMar </button>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
       </div>
@@ -52,8 +51,8 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="Páscoa.html"> Feliz Páscoa </a></li>
             <li><a class="dropdown-item" href="diadosnamorados.html"> Dia dos Namorados </a></li>
-                        <li><a class="dropdown-item disabled" href="diadefinados.html"> Dia de finados </a></li>
-                        <li><a class="dropdown-item" href="diadabandeira.html"> Dia da bandeira </a></li>
+            <li><a class="dropdown-item disabled" href="diadefinados.html"> Dia de finados </a></li>
+            <li><a class="dropdown-item" href="diadabandeira.html"> Dia da bandeira </a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -83,32 +82,34 @@
       </ul>
     </div>
   </div>
-    <br>
-    <div class="container text-center">
-        <div class="row">
-            <div class="col">
-                <p class="p">𝐃𝐚𝐭𝐚𝐬 𝐜𝐨𝐦𝐞𝐦𝐨𝐫𝐚𝐭𝐢𝐯𝐚𝐬</p>
-                <h1 class="h1">Dia de finados</h1>
-                <p class="p">
-                    até mesmo as pessoas que já nos deixaram ainda passam por nossa mente, não é? a cada dia, mês, ano que se passa essas memórias e saudades se vão e o que resta?
-                </p>
-                
-                <p class="p">
-                    relembra-las e prestar homenagens a vida que tiveram no "plano carnal" as vezes é também uma forma de superar o luto e seguir em frente.
-                </p>
-                <p class="p">
-                  encomende sua coroa de flores e se lembre dessas pessoas!
-                </p>
-            </div>
-            <div class="col">
-                <figure class="figure">
-                    <img src="img/diados.jpg" class="figure-img img-fluid rounded" alt="...">
-                </div>
-                   <figcaption class="figure-caption text-end"> Flor laranja </figcaption>
-                </figure>
-            </div>
-        </div>
+  <br>
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <p class="p">𝐃𝐚𝐭𝐚𝐬 𝐜𝐨𝐦𝐞𝐦𝐨𝐫𝐚𝐭𝐢𝐯𝐚𝐬</p>
+        <h1 class="h1">Dia de finados</h1>
+        <p class="p">
+          até mesmo as pessoas que já nos deixaram ainda passam por nossa mente, não é? a cada dia, mês, ano que se
+          passa essas memórias e saudades se vão e o que resta?
+        </p>
+
+        <p class="p">
+          relembra-las e prestar homenagens a vida que tiveram no "plano carnal" as vezes é também uma forma de superar
+          o luto e seguir em frente.
+        </p>
+        <p class="p">
+          encomende sua coroa de flores e se lembre dessas pessoas!
+        </p>
+      </div>
+      <div class="col">
+        <figure class="figure">
+          <img src="img/diados.jpg" class="figure-img img-fluid rounded" alt="...">
+      </div>
+      <figcaption class="figure-caption text-end"> Flor laranja </figcaption>
+      </figure>
     </div>
+  </div>
+  </div>
 </body>
 
 </html>
