--- a/diadosnamorados.html
+++ b/diadosnamorados.html
@@ -11,7 +11,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dia dos Namorados</title>
+  <title>BeloMar</title>
 </head>
 
 <body>
@@ -21,7 +21,6 @@
         data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"> BeloMar </button>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
       </div>
@@ -34,10 +33,10 @@
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="container-fluid" id="menu-header2">
-  <form class="d-flex" role="search">
-    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-    <a class="nav-item" href="searc.html"><button class="btn btn-outline-success" type="button">Search</button></a>
-  </form>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <a class="nav-item" href="searc.html"><button class="btn btn-outline-success" type="button">Search</button></a>
+      </form>
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
