--- a/margarida.html
+++ b/margarida.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-  <title>Margarida</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
+    <title>Margarida</title>
 </head>
 
 <body>
@@ -18,7 +18,6 @@
         data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"> BeloMar </button>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
       </div>
@@ -87,17 +86,22 @@
     <div class="row">
       <div class="col">
         <h1 class="h1-flor">Qual é o verdadeiro significado de margarida?</h1>
-        <p class="p">Antigamente, a flor margarida era considerada a flor das donzelas e ainda hoje simboliza a juventude, o amor inocente e a sensibilidade. Esta delicada flor também representa a pureza, a paz, a bondade e afeto. A flor margarida fica linda dentro de casa.</p>
+        <p class="p">Antigamente, a flor margarida era considerada a flor das donzelas e ainda hoje simboliza a
+          juventude, o amor inocente e a sensibilidade. Esta delicada flor também representa a pureza, a paz, a bondade
+          e afeto. A flor margarida fica linda dentro de casa.</p>
         <img src="img/margarida1.jpg" class="img-thumbnail" alt="...">
       </div>
       <div class="col">
         <img src="img/margarida2.jpg" class="img-thumbnail" alt="...">
         <h1 class="h1-flor">Qual é a mensagem de margarida?</h1>
-        <p class="p">A flor margarida branca significa o amor, pureza, paz, inocência, juventude, criatividade, virgindade, sensibilidade e a bondade..</p>
+        <p class="p">A flor margarida branca significa o amor, pureza, paz, inocência, juventude, criatividade,
+          virgindade, sensibilidade e a bondade..</p>
       </div>
       <div class="col">
         <h1 class="h1-flor">Como plantar e cuidar de margarida no vaso?</h1>
-        <p  class="p">Se a margarida for cultivada em vaso, escolha um com furo, para que o solo não fique encharcado, evitando assim o apodrecimento do caule. Elas exigem raios de sol pelo menos em uma parte do dia. A planta não gosta muito de frio, por isso em casos de geadas, elas devem ser protegidas.</p>
+        <p class="p">Se a margarida for cultivada em vaso, escolha um com furo, para que o solo não fique encharcado,
+          evitando assim o apodrecimento do caule. Elas exigem raios de sol pelo menos em uma parte do dia. A planta não
+          gosta muito de frio, por isso em casos de geadas, elas devem ser protegidas.</p>
         <img src="img/margarida5.png" class="img-thumbnail" alt="...">
       </div>
     </div>
