--- a/produtos.html
+++ b/produtos.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
-  <title>Produtos</title>
+  <title>BeloMar</title>
 </head>
 
 <body>
@@ -21,7 +21,6 @@
         data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"> BeloMar </button>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
       </div>
@@ -91,10 +90,10 @@
           <img src="img/orquidea.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Orquídeas azuis</h5>
-              <p class="card-text">Por R$ 285,90</p>
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                Compre agora!
-              </button>
+            <p class="card-text">Por R$ 285,90</p>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -104,9 +103,9 @@
           <div class="card-body">
             <h5 class="card-title">Astromélias vermelhas</h5>
             <p class="card-text">Por R$ 89,89</p>
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                Compre agora!
-              </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -116,9 +115,9 @@
           <div class="card-body">
             <h5 class="card-title">Gérberas coloridas</h5>
             <p class="card-text">Por R$ 169,90</p>
-             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-               Compre agora!
-             </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -128,9 +127,9 @@
           <div class="card-body">
             <h5 class="card-title">Girassóis</h5>
             <p class="card-text">Por R$ 219,86</p>
-             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-               Compre agora!
-             </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -155,9 +154,9 @@
           <div class="card-body">
             <h5 class="card-title">Margaridinhas</h5>
             <p class="card-text">Por R$ 79,90</p>
-             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-               Compre agora!
-             </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -167,9 +166,9 @@
           <div class="card-body">
             <h5 class="card-title">Rosas vermelhas</h5>
             <p class="card-text">Por R$ 219,90</p>
-           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-             Compre agora!
-           </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -179,9 +178,9 @@
           <div class="card-body">
             <h5 class="card-title">Bêgonia vermelha</h5>
             <p class="card-text">Por R$ 129,90</p>
-             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-               Compre agora!
-             </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -194,9 +193,9 @@
           <div class="card-body">
             <h5 class="card-title">Cíclame vermelho</h5>
             <p class="card-text">Por R$ 58,32</p>
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                Compre agora!
-              </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -206,9 +205,9 @@
           <div class="card-body">
             <h5 class="card-title">Kalanchoe amarelo</h5>
             <p class="card-text">Por R$ 64,90</p>
-             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-               Compre agora!
-             </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -218,9 +217,9 @@
           <div class="card-body">
             <h5 class="card-title">Violeta roxa</h5>
             <p class="card-text">Por R$ 59,90</p>
-               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                 Compre agora!
-               </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -230,7 +229,7 @@
           <div class="card-body">
             <h5 class="card-title">Mix de flores!</h5>
             <p class="card-text">Por R$ 249,90</p>
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
               Compre agora!
             </button>
           </div><!-- card body-->
@@ -238,7 +237,7 @@
       </div><!-- col1 -->
     </div>
     <br>
-      <!-- Modal -->
+    <!-- Modal -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
       aria-labelledby="staticBackdropLabel" aria-hidden="true">
       <div class="modal-dialog">
