--- a/searc.html
+++ b/searc.html
@@ -21,7 +21,6 @@
         data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"> BeloMar </button>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
       </div>
@@ -36,7 +35,8 @@
     <div class="container-fluid" id="menu-header2">
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <a class="nav-item disabled" href="searc.html"><button class="btn btn-outline-success" type="button">Search</button></a>
+        <a class="nav-item disabled" href="searc.html"><button class="btn btn-outline-success"
+            type="button">Search</button></a>
       </form>
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -92,10 +92,10 @@
           <img src="img/orquidea.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Orquídeas azuis</h5>
-              <p class="card-text">Por R$ 285,90</p>
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                Compre agora!
-              </button>
+            <p class="card-text">Por R$ 285,90</p>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -105,9 +105,9 @@
           <div class="card-body">
             <h5 class="card-title">Astromélias vermelhas</h5>
             <p class="card-text">Por R$ 89,89</p>
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                Compre agora!
-              </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -117,9 +117,9 @@
           <div class="card-body">
             <h5 class="card-title">Gérberas coloridas</h5>
             <p class="card-text">Por R$ 169,90</p>
-             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-               Compre agora!
-             </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -129,9 +129,9 @@
           <div class="card-body">
             <h5 class="card-title">Girassóis</h5>
             <p class="card-text">Por R$ 219,86</p>
-             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-               Compre agora!
-             </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -156,9 +156,9 @@
           <div class="card-body">
             <h5 class="card-title">Margaridinhas</h5>
             <p class="card-text">Por R$ 79,90</p>
-             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-               Compre agora!
-             </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -168,9 +168,9 @@
           <div class="card-body">
             <h5 class="card-title">Rosas vermelhas</h5>
             <p class="card-text">Por R$ 219,90</p>
-           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-             Compre agora!
-           </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -180,9 +180,9 @@
           <div class="card-body">
             <h5 class="card-title">Bêgonia vermelha</h5>
             <p class="card-text">Por R$ 129,90</p>
-             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-               Compre agora!
-             </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -195,9 +195,9 @@
           <div class="card-body">
             <h5 class="card-title">Cíclame vermelho</h5>
             <p class="card-text">Por R$ 58,32</p>
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                Compre agora!
-              </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -207,9 +207,9 @@
           <div class="card-body">
             <h5 class="card-title">Kalanchoe amarelo</h5>
             <p class="card-text">Por R$ 64,90</p>
-             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-               Compre agora!
-             </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -219,9 +219,9 @@
           <div class="card-body">
             <h5 class="card-title">Violeta roxa</h5>
             <p class="card-text">Por R$ 59,90</p>
-               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                 Compre agora!
-               </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Compre agora!
+            </button>
           </div><!-- card body-->
         </div><!-- card 1-->
       </div><!-- col1 -->
@@ -231,7 +231,7 @@
           <div class="card-body">
             <h5 class="card-title">Mix de flores!</h5>
             <p class="card-text">Por R$ 249,90</p>
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
               Compre agora!
             </button>
           </div><!-- card body-->
@@ -239,131 +239,131 @@
       </div><!-- col1 -->
     </div>
     <br>
-<div class="container text-center">
-    <div class="row">
-      <div class="col">
-        <div class="card" style="width: 15rem;">
-          <img src="img/flor.chocolate.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title"> buque de flores + chocolates </h5>
-            <p class="card-text"> buque de flores a sua escolha acompanhado de chocolates </p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-              Compre agora
-            </button>
-          </div><!-- card body-->
-        </div><!-- card 1-->
-      </div><!-- col1 -->
-      <div class="col">
-        <div class="card" style="width: 15rem;">
-          <img src="img/arranjo.chique.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title"> arranjo chique </h5>
-            <p class="card-text"> Arranjo decorativo com flores especiais </p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-              Compre agora
-            </button>
-          </div><!-- card body-->
-        </div><!-- card 1-->
-      </div><!-- col1 -->
-      <div class="col">
-        <div class="card" style="width: 15rem;">
-          <img src="img/vasopremiun.webp" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title"> vaso premiun </h5>
-            <p class="card-text"> vaso impotado decorativo </p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-              Compre agora
-            </button>
-          </div><!-- card body-->
-        </div><!-- card 1-->
-      </div><!-- col1 -->
-      <div class="col">
-        <div class="card" style="width: 15rem;">
-          <img src="img/boque.estilizado.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title"> buque estilizado </h5>
-            <p class="card-text"> Buque pesonalizado com até 6 especies a sua escolha </p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-              Compre agora
-            </button>
-          </div><!-- card body-->
-        </div><!-- card 1-->
-      </div><!-- col1 -->
-    </div>
-    <br>
-    <div class="row">
-      <div class="col">
-        <div class="card" style="width: 15rem;">
-          <img src="img/flores.artificiais.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title"> flores artificiais decorativas + aromatizante de ar </h5>
-            <p class="card-text"> ideal para decorar interiores e perfumar o hambiente </p>
-            <button type="button" class="btn btn-primary" id="modalbotao" data-bs-toggle="modal"
-              data-bs-target="#staticBackdrop">
-              Compre agora
-            </button>
-          </div><!-- card body-->
-        </div><!-- card 1-->
-      </div><!-- col1 -->
-      <div class="col">
-        <div class="card" style="width: 15rem;">
-          <img src="img/cesta.de.cafe.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title"> Cesta de café da manhã </h5>
-            <p class="card-text"> Cesta com itens de café, sempre fresquinho e a pronta entrega </p>
-            <button type="button" class="btn btn-primary" id="modalbotao" data-bs-toggle="modal"
-              data-bs-target="#staticBackdrop">
-              Compre agora
-            </button>
-          </div><!-- card body-->
-        </div><!-- card 1-->
-      </div><!-- col1 -->
-      <div class="col">
-        <div class="card" style="width: 15rem;">
-          <img src="img/inverno1.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title"> Sabores do inverno </h5>
-            <p class="card-text"> Cesta com os favoritos do inverno </p>
-            <button type="button" class="btn btn-primary" id="modalbotao" data-bs-toggle="modal"
-              data-bs-target="#staticBackdrop">
-              Compre agora
-            </button>
-          </div><!-- card body-->
-        </div><!-- card 1-->
-      </div><!-- col1 -->
-      <div class="col">
-        <div class="card" style="width: 15rem;">
-          <img src="img/urso.flor.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title"> urso de pelucia + solitaria </h5>
-            <p class="card-text"> Urso de pelucia acompanhado de uma flor a sua escolha </p>
-            <button type="button" class="btn btn-primary" id="modalbotao" data-bs-toggle="modal"
-              data-bs-target="#staticBackdrop">
-              Compre agora
-            </button>
-          </div><!-- card body-->
-        </div><!-- card 1-->
-      </div><!-- col1 -->
-    </div>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <div class="card" style="width: 15rem;">
+            <img src="img/flor.chocolate.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> buque de flores + chocolates </h5>
+              <p class="card-text"> buque de flores a sua escolha acompanhado de chocolates </p>
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                Compre agora
+              </button>
+            </div><!-- card body-->
+          </div><!-- card 1-->
+        </div><!-- col1 -->
+        <div class="col">
+          <div class="card" style="width: 15rem;">
+            <img src="img/arranjo.chique.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> arranjo chique </h5>
+              <p class="card-text"> Arranjo decorativo com flores especiais </p>
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                Compre agora
+              </button>
+            </div><!-- card body-->
+          </div><!-- card 1-->
+        </div><!-- col1 -->
+        <div class="col">
+          <div class="card" style="width: 15rem;">
+            <img src="img/vasopremiun.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> vaso premiun </h5>
+              <p class="card-text"> vaso impotado decorativo </p>
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                Compre agora
+              </button>
+            </div><!-- card body-->
+          </div><!-- card 1-->
+        </div><!-- col1 -->
+        <div class="col">
+          <div class="card" style="width: 15rem;">
+            <img src="img/boque.estilizado.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> buque estilizado </h5>
+              <p class="card-text"> Buque pesonalizado com até 6 especies a sua escolha </p>
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                Compre agora
+              </button>
+            </div><!-- card body-->
+          </div><!-- card 1-->
+        </div><!-- col1 -->
+      </div>
+      <br>
+      <div class="row">
+        <div class="col">
+          <div class="card" style="width: 15rem;">
+            <img src="img/flores.artificiais.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> flores artificiais decorativas + aromatizante de ar </h5>
+              <p class="card-text"> ideal para decorar interiores e perfumar o hambiente </p>
+              <button type="button" class="btn btn-primary" id="modalbotao" data-bs-toggle="modal"
+                data-bs-target="#staticBackdrop">
+                Compre agora
+              </button>
+            </div><!-- card body-->
+          </div><!-- card 1-->
+        </div><!-- col1 -->
+        <div class="col">
+          <div class="card" style="width: 15rem;">
+            <img src="img/cesta.de.cafe.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> Cesta de café da manhã </h5>
+              <p class="card-text"> Cesta com itens de café, sempre fresquinho e a pronta entrega </p>
+              <button type="button" class="btn btn-primary" id="modalbotao" data-bs-toggle="modal"
+                data-bs-target="#staticBackdrop">
+                Compre agora
+              </button>
+            </div><!-- card body-->
+          </div><!-- card 1-->
+        </div><!-- col1 -->
+        <div class="col">
+          <div class="card" style="width: 15rem;">
+            <img src="img/inverno1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> Sabores do inverno </h5>
+              <p class="card-text"> Cesta com os favoritos do inverno </p>
+              <button type="button" class="btn btn-primary" id="modalbotao" data-bs-toggle="modal"
+                data-bs-target="#staticBackdrop">
+                Compre agora
+              </button>
+            </div><!-- card body-->
+          </div><!-- card 1-->
+        </div><!-- col1 -->
+        <div class="col">
+          <div class="card" style="width: 15rem;">
+            <img src="img/urso.flor.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> urso de pelucia + solitaria </h5>
+              <p class="card-text"> Urso de pelucia acompanhado de uma flor a sua escolha </p>
+              <button type="button" class="btn btn-primary" id="modalbotao" data-bs-toggle="modal"
+                data-bs-target="#staticBackdrop">
+                Compre agora
+              </button>
+            </div><!-- card body-->
+          </div><!-- card 1-->
+        </div><!-- col1 -->
+      </div>
       <!-- Modal -->
-    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-      aria-labelledby="staticBackdropLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="staticBackdropLabel"> Item selecionado </h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            verificamos a quantidade em estoque, produto disponivel e pronto para a compra
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"> Fechar </button>
-            <a href="produtos.html"><button type="button" class="btn btn-primary"> Continue comprando </button></a>
+      <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="staticBackdropLabel"> Item selecionado </h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              verificamos a quantidade em estoque, produto disponivel e pronto para a compra
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"> Fechar </button>
+              <a href="produtos.html"><button type="button" class="btn btn-primary"> Continue comprando </button></a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 </body>
 
 </html>
